[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "acoustic_distance"
author = "Ryan Soh-Eun Shim"
author-email = "soh-eun.shim@student.uni-tuebingen.de"
home-page = "https://github.com/b05102139/acoustic_distance"
classifiers = [ "License :: OSI Approved :: Apache Software License",]
description-file = "README.md"

